--- a/src/test/resources/simplelogger.properties
+++ b/src/test/resources/simplelogger.properties
@@ -31,9 +31,10 @@ org.slf4j.simpleLogger.showShortLogName=true
 org.slf4j.simpleLogger.levelInBrackets=true
 #
 # Comment-out this line to log to System.err rather than a file
-# org.slf4j.simpleLogger.logFile=target/hapi-junit-test.log
+# org.slf4j.simpleLogger.logFile=target/sftp-junit-test.log
 #
 # Quiet HAPI down
 org.slf4j.simpleLogger.log.ca.uhn.hl7v2 = WARN
 #
-org.slf4j.simpleLogger.log.com.pronoia.junit.hapi=INFO
+org.slf4j.simpleLogger.log.com.pronoia.junit.sftp=INFO
+# org.slf4j.simpleLogger.log.org.apache.sshd=DEBUG
