Added event listerers for testing

--- a/src/test/resources/simplelogger.properties
+++ b/src/test/resources/simplelogger.properties
@@ -31,7 +31,7 @@ org.slf4j.simpleLogger.showShortLogName=true
 org.slf4j.simpleLogger.levelInBrackets=true
 #
 # Comment-out this line to log to System.err rather than a file
-# org.slf4j.simpleLogger.logFile=target/sftp-junit-test.log
+org.slf4j.simpleLogger.logFile=target/sftp-junit-test.log
 #
 # Quiet HAPI down
 org.slf4j.simpleLogger.log.ca.uhn.hl7v2 = WARN
