--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
 
     <groupId>com.github.hqstevenson.junit</groupId>
     <artifactId>sftp-junit</artifactId>
-    <version>0.2.3</version>
+    <version>0.2.4</version>
 
     <name>SFTP JUnit Rule</name>
     <description>
@@ -107,6 +107,13 @@
             <groupId>org.apache.camel</groupId>
             <artifactId>camel-ftp</artifactId>
             <version>${camel-version}</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>2.18.3</version>
             <scope>test</scope>
         </dependency>
 
